@@ -1,12 +1,10 @@
 package org.freeplane.plugin.workspace.config.creator;
 
-import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import org.freeplane.core.util.LogUtils;
 import org.freeplane.n3.nanoxml.XMLElement;
-import org.freeplane.plugin.workspace.WorkspaceController;
 import org.freeplane.plugin.workspace.config.node.AWorkspaceNode;
 import org.freeplane.plugin.workspace.config.node.FilesystemMindMapLinkNode;
 
@@ -24,19 +22,15 @@ public class FilesystemMindMapLinkCreator extends AConfigurationNodeCreator {
 		String path = data.getAttribute("path", null);
 		if (path != null) {
 			LogUtils.info("FilesystemLinkPath: " + path);
-			File f = new File(path);
-			if (!f.isAbsolute()) {
-				path = WorkspaceController.getCurrentWorkspaceController().getWorkspaceLocation() + File.separator + path;				
-			}
-			URL url = null;
+			
+			URI uri;
 			try {
-				url = new URL("file://" + path);
-				LogUtils.info("FilesystemFolderCreator.getNode: " + url);
+				uri = new URI(path);
+				node.setLinkPath(uri);
 			}
-			catch (MalformedURLException e) {
+			catch (URISyntaxException e) {
 				e.printStackTrace();
-			}
-			node.setLinkPath(url);
+			} 
 		}
 		return node;
 
